[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manganite"
dynamic = ["version"]
dependencies = [
  "ast-scope",
  "nbconvert",
  "panel>=1.2",
  "param==1.13.0",
  "pathvalidate>=3.1.0"
]

[project.scripts]
mnn = "manganite.command:main"

[tool.setuptools.dynamic]
version = {attr = "manganite.__version__"}

[tool.setuptools.data-files]
"etc/jupyter/jupyter_server_config.d" = [
  "jupyter-config/jupyter_server_config.d/manganite.json"
]
