[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manganite"
dynamic = ["version"]
dependencies = [
  "ast-scope",
  "nbconvert",
  "panel>=1.2",
  "param==1.13.0",
  "pathvalidate>=3.1.0",
  "jupyter-bokeh>=3.0.7"
]
authors = [
  { name="Hubert Kosiacki", email="hubert@kosiacki.com" },
  { name="Daniel Dobos", email="danielandras.dobos@gmail.com" },
  { name="Nils Lohndorf", email="nils@loehndorf.com" },
]
description = "Dashboarding tool built on the powerful Panel framework."
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
mnn = "manganite.command:main"

[project.urls]
"Homepage" = "https://github.com/LCL-CAVE/manganite"
"Bug Tracker" = "https://github.com/LCL-CAVE/manganite/issues"

[tool.setuptools.dynamic]
version = {attr = "manganite.__version__"}

[tool.setuptools.data-files]
"etc/jupyter/jupyter_server_config.d" = [
  "jupyter-config/jupyter_server_config.d/manganite.json"
]
